Project

General

Profile

Actions

Bug #44280

closed

rgw: fail as expected when get/set-bucket-versioning attempted on a non-existent bucket

Added by Matt Benjamin about 4 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Regression:
Yes
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

My reading of https://docs.aws.amazon.com/AmazonS3/latest/API/API_PutBucketVersioning.html is that the expected behavior is the
obvious one--i.e., RGW should return HTTP 404 and NoSuchBucket.


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #45954: nautilus: rgw: fail as expected when get/set-bucket-versioning attempted on a non-existent bucketResolvedNathan CutlerActions
Actions #1

Updated by Matt Benjamin about 4 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 33521
Actions #2

Updated by Matt Benjamin about 4 years ago

  • Regression changed from No to Yes
Actions #3

Updated by J. Eric Ivancich almost 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #45954: nautilus: rgw: fail as expected when get/set-bucket-versioning attempted on a non-existent bucket added
Actions #5

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF