rgw: fail when get/set-bucket-versioning attempted on a non-existent bucket

These should not succeed, but fail w/HTTP 404 and NoSuchBucket as
the API error.

Fixes: https://tracker.ceph.com/issues/44280

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>